- Fixed Ely.by - Added Modrinth/Curseforge Auto Dependency installer - Added Modrinth/Curseforge Update Checker - Added Mod Updater - Added 2 buttons that check either Modrinth or Curseforge mods that need updated - Fixed latestlog.txt not showing right info oops moment - Bug fixes